# AI-Agent_demo

./: README.md  pyproject.toml
milvus_demo/: 01_test.py
主流框架/auto_gen/: README.md  autogen_software_team.py
经典范式/plan_slove/: Plan_and_solve.py
经典范式/reflection/: Reflection.py
